Fixed spacing issue on project boxes

--- a/css/sass/_content.scss
+++ b/css/sass/_content.scss
@@ -512,16 +512,6 @@ div.toolbar {
 
 	margin-right: -$grid-gutter-width;
 
-	&:before {
-		content: '';
-		display: block;
-		width: 100%;
-	}
-	&:after {
-		content: '';
-		display: inline-block;
-		width: 100%;
-	}
 	.box {
 		display: inline-block;
 		position: relative;
